--- a/a3_info474/index.html
+++ b/a3_info474/index.html
@@ -7,11 +7,48 @@
   	height: 400px;
   }
 </style>
-
+<script>src='d3script.js'</script>
+<script src="http://d3js.org/d3.v4.min.js"></script>
 <body>
   <svg></svg>
+  <script>
+  var margin = {top: 20, right: 20, bottom: 20, left: 20},
+    width = +400- margin.left - margin.right,
+height = +400 - margin.top - margin.bottom
+
+var svg = d3.select("svg")
+    .append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+var dataset = [];
+
+
+var dataset = d3.csv('data.csv', function(data) {
+    dataset = data
+    console.log(data)
+    console.log(dataset)
+})
+
+
+var xScale = d3.scaleLinear()
+.domain([0, d3.max(dataset, function(d) { return d[6]})])
+.range([0,width]);
+
+var yScale = d3.scaleLinear()
+    .domain([0, d3.max(dataset, function(d) { return d[8]})])
+    .range([height,0]);
+
+
+
+svg.selectAll("circle") 
+    .data(dataset)  
+    .enter().append("circle")
+    .attr("cx", function(d) { return xScale(d[6]); })  
+    .attr("cy", function(d) { return yScale(d[8]); }) 
+    .attr("r", 10);
+    
+  </script>
+  
 </body>
 
-<script src="http://d3js.org/d3.v4.min.js"></script>
+
 </html>
 
