--- a/a3_info474/index.html
+++ b/a3_info474/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
 <meta charset="utf-8">
+<style>     
+    div.tooltip { 
+    position: absolute; 
+    text-align: center; 
+    width: 200px; 
+    height: 56px; 
+    font: 12px sans-serif; 
+    background: lightsteelblue; 
+    border: 0px; 
+    pointer-events: none; }
+</style>
 <style>
   svg {
-  	width: 400px;
-  	height: 400px;
+  	width: 800px;
+  	height: 650px;
   }
 </style>
 <script>src='d3script.js'</script>
@@ -14,8 +25,10 @@
   <script>
   
 var margin = {top: 20, right: 20, bottom: 20, left: 60},
-    width = +400- margin.left - margin.right,
-    height = +400 - margin.top - margin.bottom
+    width = +800- margin.left - margin.right,
+    height = +650 - margin.top - margin.bottom
+
+var col = d3.scaleOrdinal(d3.schemeCategory10);
 
 var svg = d3.select("svg")
     .append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
@@ -53,7 +66,8 @@ d3.csv('data.csv', function(data){
 		.attr("cx", function(d) { return xScale(d[0]); })  
 		.attr("cy", function(d) { return yScale(d[1]); }) 
 		.attr("r", 10)
-       .on("mouseover", function(d) {		
+        .style("fill", function(d, i) {console.log(data[i].Major_category); return col(data[i].Major_category); })
+        .on("mouseover", function(d) {		
             div.transition()		
                 .duration(200)		
                 .style("opacity", .9);		
