not working stuff

--- a/a3_info474/index.html
+++ b/a3_info474/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html>
 <meta charset="utf-8">
-
+<title>assdf</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="http://d3js.org/d3.v4.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 <body>
-<h1>College Major Employment and Salary Data</h1>
-<div id="filters">
-<select id=“selectform”>
-<option value="none" selected = 'selected'>All Major Categories</option> 
-<option value="Agriculture & Natural Resources">Agriculture & Natural Resources</option>
-<option value="Biology & Life Science">Biology & Life Science.</option>
-<option value="Engineering">Engineering</option>
-<option value="Humanities & Liberal Arts">Humanities & Liberal Arts</option>
-<option value="Computers & Mathematics">Computers & Mathematics.</option>
-<option value="Industrial Arts & Consumer Services">Industrial Arts & Consumer Services</option>
-<option value="Education">Education</option>
-<option value="Law & Public Policy">Law & Public Policy</option>
-<option value="Interdisciplinary">Interdisciplinary</option>
-<option value="Health">Health</option>
-<option value="Social Science">Social Science</option>
-<option value="Physical Sciences">Physical Sciences</option>
-<option value="Psychology & Social Work">Psychology & Social Work</option>
-<option value="Arts">Arts</option>
-<option value="Business">Business</option>
-</select>
-</div>
+  <h1>College Major Employment and Salary Data</h1>
+  <div id="filters">
+    <select id=“selectform”>
+    <option value="none" selected = 'selected'>All Major Categories</option> 
+    <option value="Agriculture &amp; Natural Resources">Agriculture &amp; Natural Resources</option>
+    <option value="Biology &amp; Life Science">Biology &amp; Life Science.</option>
+    <option value="Engineering">Engineering</option>
+    <option value="Humanities &amp; Liberal Arts">Humanities &amp; Liberal Arts</option>
+    <option value="Computers &amp; Mathematics">Computers &amp; Mathematics.</option>
+    <option value="Industrial Arts &amp; Consumer Services">Industrial Arts &amp; Consumer Services</option>
+    <option value="Education">Education</option>
+    <option value="Law &amp; Public Policy">Law &amp; Public Policy</option>
+    <option value="Interdisciplinary">Interdisciplinary</option>
+    <option value="Health">Health</option>
+    <option value="Social Science">Social Science</option>
+    <option value="Physical Sciences">Physical Sciences</option>
+    <option value="Psychology &amp; Social Work">Psychology &amp; Social Work</option>
+    <option value="Arts">Arts</option>
+    <option value="Business">Business</option>
+  </select>
+  </div>
   <svg></svg>
   <script type='text/javascript' src='d3script.js'></script>
 
@@ -34,4 +35,3 @@
 
 
 </html>
-
