--- a/a3_info474/index.html
+++ b/a3_info474/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta charset="utf-8">
-<title>assdf</title>
+<title>Alkan+Holle</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="http://d3js.org/d3.v4.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -21,7 +21,6 @@
     <option value="Industrial Arts &amp; Consumer Services">Industrial Arts &amp; Consumer Services</option>
     <option value="Education">Education</option>
     <option value="Law &amp; Public Policy">Law &amp; Public Policy</option>
-    <option value="Interdisciplinary">Interdisciplinary</option>
     <option value="Health">Health</option>
     <option value="Social Science">Social Science</option>
     <option value="Physical Sciences">Physical Sciences</option>
