trying to add legend

--- a/a3_info474/index.html
+++ b/a3_info474/index.html
@@ -11,7 +11,8 @@
   <h1>College Major Employment and Salary Data</h1>
   <p>Data Source: <a href="https://github.com/fivethirtyeight/data/tree/master/college-majors">fivethirtyeight</a></p>
   <div id="filters">
-    <select id=“selectform”>
+    <h3>Select Major Category:
+    <select id=“selectform”></h3>
     <option value="none" selected = 'selected'>All Major Categories</option> 
     <option value="Agriculture &amp; Natural Resources">Agriculture &amp; Natural Resources</option>
     <option value="Biology &amp; Life Science">Biology &amp; Life Science.</option>
